--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>YEAH!!!</h1>
+
+  <img src="dancingBanana.gif" alt="">
 </body>
 </html>
