--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+  <script src="main.js"></script>
 </head>
 <body>
   <h1>YEAH!!!</h1>
